--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/crazy2g/api#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "jimp": "^0.5.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
