--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "homepage": "https://github.com/crazy2g/api#readme",
   "dependencies": {
+    "@jimp/custom": "^0.5.3",
+    "@jimp/plugin-circle": "^0.5.3",
+    "@jimp/plugin-fisheye": "^0.5.3",
+    "@jimp/plugins": "^0.5.3",
+    "@jimp/types": "^0.5.3",
     "express": "^4.16.3",
     "jimp": "^0.5.3",
     "request": "^2.88.0",
