--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "api",
-  "version": "1.0.0-alpha",
+  "version": "1.1.0",
   "description": "API used for all of Crazy2G's applications and websites",
   "main": "index.js",
   "scripts": {
     "test": "standard",
+    "start-dev": "nodemon --exec node -r dotenv/config index.js",
     "fix": "standard --fix"
   },
   "repository": {
@@ -33,7 +34,9 @@
     "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
+    "dotenv": "^6.1.0",
     "eslint-config-standard": "^12.0.0",
+    "nodemon": "^1.18.4",
     "standard": "^12.0.1"
   }
 }
