--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "API used for all of Crazy2G's applications and websites",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "@jimp/types": "^0.5.3",
     "express": "^4.16.3",
     "jimp": "^0.5.3",
+    "morgan": "^1.9.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
