--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "API used for all of Crazy2G's applications and websites",
   "main": "index.js",
   "scripts": {
@@ -32,7 +32,8 @@
     "jimp": "^0.5.3",
     "morgan": "^1.9.1",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "response-time": "^2.3.2"
   },
   "devDependencies": {
     "dotenv": "^6.1.0",
