--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "API used for all of Crazy2G's applications and websites",
   "main": "index.js",
   "scripts": {
@@ -30,10 +30,14 @@
     "@jimp/types": "^0.5.3",
     "express": "^4.16.3",
     "jimp": "^0.5.3",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.3",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.9.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "response-time": "^2.3.2"
+    "response-time": "^2.3.2",
+    "transform-props": "^1.0.1"
   },
   "devDependencies": {
     "dotenv": "^6.1.0",
