--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.3",
     "jimp": "^0.5.3",
     "jsonwebtoken": "^8.3.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.3",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.9.1",
