--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "API used for all of Crazy2G's applications and websites",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,8 @@
     "figlet": "^1.2.1",
     "jimp": "^0.5.3",
     "jsonwebtoken": "^8.3.0",
+    "moment": "^2.22.2",
+    "moment-duration-format": "^2.2.2",
     "mongoose": "^5.3.3",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.9.1",
